--- a/package.json
+++ b/package.json
@@ -1,7 +1,7 @@
 {
   "name": "payload-sidebar-plugin",
-  "version": "1.1.10",
-  "description": "Sortable navigation sidebar with pinning and multi-color badge support for Payload CMS 3.x",
+  "version": "1.2.0",
+  "description": "Sortable navigation sidebar with pinning, custom links, and multi-color badge support for Payload CMS 3.x",
   "author": "Kari",
   "license": "MIT",
   "type": "module",
