--- a/package.json
+++ b/package.json
@@ -55,6 +55,9 @@
     "payload": "^3.0.0",
     "react": "^18.0.0 || ^19.0.0"
   },
+  "dependencies": {
+    "lucide-react": ">=0.300.0"
+  },
   "devDependencies": {
     "@payloadcms/translations": "^3.0.0",
     "@payloadcms/ui": "^3.0.0",
